<resources>
    <string name="app_name">河西力量警员版</string>
    <string name="cancle_record">录音已经取消</string>
    <string name="hintPhone">请输入手机号</string>
    <string name="getCode">请输入验证码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputComformPassword">请输入确认密码</string>
    <string name="noEqual">输入密码与确认密码不同，请重新输入</string>
    <string name="correntPhone">请输入正确的手机号</string>
    <string name="inputPasswordLength">请输入至少8位以上的数字或英文</string>
    <string name="useName">姓名</string>
    <string name="inputUserName">请输入您的真实姓名</string>
    <string name="useSex">性别</string>
    <string name="useAger">年龄</string>
    <string name="inputUserAger">请输入您的年龄</string>
    <string name="useAddress">地址</string>
    <string name="inputUserAddress">请输入您的真实地址</string>
    <string name="useProfessional">职业</string>
    <string name="inputUserProfessional">请输入您的职业</string>
    <string name="next">下一步</string>
    <string name="inputUserSex">请选择您的性别</string>
    <string name="address">河西</string>
    <string name="otherAddress">其他区</string>
    <string name="registerOK">开启您的热心之旅</string>
    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>

    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>
    <string name="cancel">取消</string>
    <string name="welcome">欢迎使用智慧警务</string>
    <string name="registerHint">密码请使用至少8位英文或数字，不允许使用符号。</string>
    <string name="register">注册</string>
    <string name="sendCode">获取验证码</string>
    <string name="goLogin">已有账号，立即登录</string>
    <string name="perfectInfo">请先完善您的个人信息</string>
    <string name="welcomeHexi">欢迎加入河西力量</string>
    <string name="wantHexi">想要加入信息员的队伍吗</string>
    <string name="contactUs">赶快与我们联系</string>
    <string name="psdpatten">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="netError">连接网络异常，请检查网络</string>
    <string name="perfectTitle">补全资料</string>
    <string name="addressTitle">选择归属地</string>
    <string name="okTitle">完成</string>
    <string name="inforOfficer">信息员列表</string>
    <string name="usertype">信息员类型</string>
    <string name="complete">完成</string>
    <string name="hintsearch">请输入关键字进行搜索</string>
    <string name="userlabel">信息员标签</string>
    <string name="search">搜索</string>
    <string name="reset">重置</string>
    <string name="comform">确定</string>
    <string name="fileprovider">com.esint.pahx.messenger.HXMJFileProvider</string>
    <string name="editorHint">更换名称不能为空</string>
</resources>
