<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <include layout="@layout/titlebar_top_layout"/>
    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/l00_login_logo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@null"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/welcome"
        android:textColor="#333333"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/perfectInfo"
        android:textColor="#6280f9"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonheight"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useName"
            android:textColor="@color/textnormalcolor"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textlargernormal"
            />
        <EditText
            android:id="@+id/et_user_name"
            android:layout_toEndOf="@id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:inputType="text"
            android:ellipsize="end"
            android:layout_marginStart="@dimen/normalmargin"
            android:hint="@string/inputUserName"
            android:textColorHint="@color/texthintcolor"
            android:textColor="@color/textnormalcolor"
            android:textSize="@dimen/textnormal"
            android:background="@null"
            android:maxLength="10" />
    </RelativeLayout>
    <View
        style="@style/ViewLineH"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonheight"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tv_user_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useSex"
            android:textColor="@color/textnormalcolor"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textlargernormal"
            />
        <RadioGroup
            android:id="@+id/rg_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_user_sex"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_sex_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normalmargin"
                android:layout_marginRight="@dimen/normalmargin"
                style="@style/RedioButtonStyle"
                android:textColor="@color/textnormalcolor"
                android:text="   男"/>
            <RadioButton
                android:id="@+id/rb_sex_women"
                android:layout_toRightOf="@id/rb_sex_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/normalmargin"
                style="@style/RedioButtonStyle1"
                android:textColor="@color/textnormalcolor"
                android:text="  女"/>
        </RadioGroup>

    </RelativeLayout>
    <View
        style="@style/ViewLineH"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonheight"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tv_user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useAger"
            android:textColor="@color/textnormalcolor"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textlargernormal"
            />
        <EditText
            android:id="@+id/et_user_age"
            android:layout_toEndOf="@id/tv_user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:inputType="number"
            android:layout_marginStart="@dimen/normalmargin"
            android:hint="@string/inputUserAger"
            android:textColorHint="@color/texthintcolor"
            android:textColor="@color/textnormalcolor"
            android:textSize="@dimen/textnormal"
            android:background="@null"
            android:maxLength="3" />
    </RelativeLayout>
    <View
        style="@style/ViewLineH"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonheight"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tv_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useAddress"
            android:textColor="@color/textnormalcolor"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textlargernormal"
            />
        <EditText
            android:id="@+id/et_user_address"
            android:layout_toEndOf="@id/tv_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:inputType="text"
            android:layout_marginStart="@dimen/normalmargin"
            android:hint="@string/inputUserAddress"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/texthintcolor"
            android:textColor="@color/textnormalcolor"
            android:textSize="@dimen/textnormal"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@null"
            android:maxLength="100" />
    </RelativeLayout>
    <View
        style="@style/ViewLineH"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonheight"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tv_user_professional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useProfessional"
            android:textColor="@color/textnormalcolor"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textlargernormal"
            />
        <EditText
            android:id="@+id/et_user_professional"
            android:layout_toEndOf="@id/tv_user_professional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:inputType="text"
            android:layout_marginStart="@dimen/normalmargin"
            android:hint="@string/inputUserProfessional"
            android:textColorHint="@color/texthintcolor"
            android:textColor="@color/textnormalcolor"
            android:textSize="@dimen/textnormal"
            android:background="@null"
            android:ellipsize="end"
            android:maxLength="20" />
    </RelativeLayout>
    <View
        style="@style/ViewLineH"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:text="@string/next"
            android:gravity="center"
            android:padding="10dp"
            android:id="@+id/bt_next"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff"
            android:background="@drawable/send_gray"
            />
    </RelativeLayout>
</LinearLayout>
