<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#6280f9"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_margin="10dp"
            android:id="@+id/finishTV"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/l00_login_logo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@null"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/welcome"
        android:textColor="#333333"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/tv_goLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goLogin"
        android:textSize="15sp"
        android:textColor="@color/textBlue"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/hintPhone"
            android:background="#ffffff"
            android:singleLine="true"
            android:maxLength="11"
            android:inputType="phone"
            android:padding="6dp"
            />
    </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="#eaeaea"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/et_check"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/getCode"
            android:background="#ffffff"
            android:padding="6dp"
            android:inputType="number"
            />
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sendCode"
            android:gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/send_gray"
            android:id="@+id/tv_getCode"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eaeaea"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/inputPassword"
            android:singleLine="true"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:background="#ffffff"
            android:padding="6dp"
            android:inputType="textPassword"
            />
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/show_psd"
            android:id="@+id/psdControloneView"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eaeaea"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/et_conform_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/inputComformPassword"
            android:singleLine="true"
            android:background="#ffffff"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:padding="6dp"
            android:inputType="textPassword"
            />
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/show_psd"
            android:id="@+id/psdControltwoView"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eaeaea"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#999999"
        android:paddingStart="25dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/registerHint"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:text="@string/register"
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/commitSureBT"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff"
            android:background="@drawable/send_gray"
            />
    </RelativeLayout>
</LinearLayout>