<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaea"
    android:fitsSystemWindows="true">
    <include
        android:id="@+id/layout"
        layout="@layout/titlebar_top_layout" />
    <ScrollView
        android:layout_below="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/search_shape"
                android:hint="@string/hintsearch"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:textColor="@color/textnormalcolor"
                android:textColorHint="@color/textnormalcolor"
                android:textSize="@dimen/textnormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/largermargin"
                android:text="@string/usertype"
                android:textColor="@color/textblackcolor"
                android:textSize="@dimen/textlargernormal" />

            <com.xiante.jingwu.qingbao.CustomView.CommonView.MyGridView
                android:id="@+id/gv_search_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/normalmargin"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:scrollbars="none" />

            <View style="@style/ViewLineH" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/largermargin"
                android:layout_marginTop="10dp"
                android:text="@string/userlabel"
                android:textColor="@color/textblackcolor"
                android:textSize="@dimen/textlargernormal" />

            <com.xiante.jingwu.qingbao.CustomView.CommonView.MyGridView
                android:id="@+id/gv_search_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/normalmargin"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:scrollbars="none" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/send_power"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</RelativeLayout>
